# duckdb-unitycatalog-playground

./: Dockerfile  README.md  docker-compose.yaml  requirements.txt
marimo-playground/: pyproject.toml  start.sh
marimo-playground/notebooks/: unitycatalog-delta.py
scripts/: run-delta  run-unity
scripts/delta/01-insert/: run  setup
scripts/delta/02-timetravel/: run
scripts/delta/03-incrsnap/: run  setup
scripts/unity/04-intro/: read  setup  verify  write
scripts/unity/05-cmc/: setup  verify  write-concurrent  write-single
